--- a/KIWOOM/interface.ui
+++ b/KIWOOM/interface.ui
@@ -127,6 +127,32 @@
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout_6">
+     <item row="0" column="5">
+      <widget class="QLabel" name="wid_show_deposit_d2">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="3">
+      <widget class="QLabel" name="wid_show_deposit_d1">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       </property>
+      </widget>
+     </item>
      <item row="0" column="0">
       <widget class="QLabel" name="label_15">
        <property name="enabled">
@@ -153,19 +179,6 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="1">
-      <widget class="QLabel" name="wid_show_deposit">
-       <property name="enabled">
-        <bool>true</bool>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-       </property>
-      </widget>
-     </item>
      <item row="0" column="2">
       <widget class="QLabel" name="label_16">
        <property name="enabled">
@@ -179,8 +192,8 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="5">
-      <widget class="QLabel" name="wid_show_deposit_d2">
+     <item row="0" column="1">
+      <widget class="QLabel" name="wid_show_deposit">
        <property name="enabled">
         <bool>true</bool>
        </property>
@@ -192,8 +205,21 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="3">
-      <widget class="QLabel" name="wid_show_deposit_d1">
+     <item row="0" column="6">
+      <widget class="QLabel" name="label_22">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="text">
+        <string>가능금액 :</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="7">
+      <widget class="QLabel" name="wid_orderable_money">
        <property name="enabled">
         <bool>true</bool>
        </property>
