--- a/KIWOOM/interface.ui
+++ b/KIWOOM/interface.ui
@@ -193,7 +193,7 @@
         <bool>true</bool>
        </property>
        <property name="text">
-        <string>가능금액 :</string>
+        <string>인출가능금 :</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
